# Vibmory_HapticPatternGenerator

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  README.md  Sensors_CPP.pro  Vibmory_HapticPatternGenerator.pro  Windows.h  actuator.h  actuatoraudio.cpp  actuatoraudio.h  animation.cpp  animation.h  animationaudio.cpp  animationaudio.h  config.opt  config.summary  createproject.cpp  createproject.h  createproject.ui  createprojectwindow.cpp  createprojectwindow.h  frame.cpp  frame.h  helper.cpp  helper.h  mainwindow.cpp  mainwindow.h  paintingwidget.cpp  paintingwidget.h  playinganimation.cpp  playinganimation.h  portaudio.h  portaudio.lib  projectsetting.cpp  projectsetting.h  projectsetting.ui  projectsettingwindow.cpp  projectsettingwindow.h  (+1 more)
config.tests/arch/: CMakeCache.txt  cmake_install.cmake
config.tests/separate_debug_info/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_aesni/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx2/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512bw/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512cd/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512dq/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512er/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512f/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512ifma/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512pf/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512vbmi/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_avx512vl/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_f16c/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_rdrnd/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_rdseed/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_shani/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_sse2/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_sse3/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_sse4_1/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_sse4_2/: CMakeCache.txt  cmake_install.cmake
config.tests/x86_simd_ssse3/: CMakeCache.txt  cmake_install.cmake
docs/diagrams/: ClassDiagram.md
include/: animation.h  animationaudio.h  animationcontroller.h  audioactuator.h  frame.h  helper.h  iactuatorcontroller.h  paintingwidget.h  projectsettingwindow.h
lib/cmake/Qt6/: qt.toolchain.cmake
lib/cmake/Qt6BuildInternals/: QtBuildInternalsExtra.cmake
lib/cmake/Qt6Core/: Qt6CoreConfigExtras.cmake  (+1 more)
mkspecs/modules/: qt_plugin_qdirect2d.pri  qt_plugin_qgif.pri  qt_plugin_qico.pri  qt_plugin_qjpeg.pri  qt_plugin_qminimal.pri  qt_plugin_qoffscreen.pri  qt_plugin_qsqlite.pri  qt_plugin_qsqlodbc.pri  qt_plugin_qtuiotouchplugin.pri  qt_plugin_qwindows.pri  qt_plugin_qwindowsvistastyle.pri
modules/: Concurrent.json  Core.json  Core_qobject.json  DBus.json  DeviceDiscoverySupport.json  EntryPoint.json  FbSupport.json  Gui.json  Network.json  OpenGL.json  OpenGLWidgets.json  PrintSupport.json  Sql.json  Test.json  Widgets.json  Xml.json  Zlib.json
src/: animation.cpp  animationaudio.cpp  animationcontroller.cpp  audioactuator.cpp  createprojectwindow.cpp  frame.cpp  helper.cpp  main.cpp  mainwindow.cpp  paintingwidget.cpp  projectsettingwindow.cpp
tests/: CMakeLists.txt  test_animation.cpp  test_frame.cpp
tests/resources/: invalid.csv  valid.csv
tests/unit/: test_frame.cpp
ui/: createprojectwindow.ui  mainwindow.ui
(+35 files in other folders)
